[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmage"
version = "0.1.0"
description = "A powerful CLI tool to generate high-quality images (SVG/PNG) from any AI model—even text-only LLMs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [    
    "litellm",
    "resvg-py",
    "python-dotenv",
    "rich"
]

[project.scripts]
llmage = "llmage:main"

[tool.setuptools]
py-modules = ["llmage"]
